# freesurfer_analyses

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml
ci/: bootstrap.py
docs/: conf.py  installation.rst  usage.rst
docs/reference/: freesurfer_analyses.rst  index.rst
src/freesurfer_analyses/: __main__.py  cli.py  manager.py
src/freesurfer_analyses/data/: bids.py
src/freesurfer_analyses/parcellations/: __init__.py  parcellations.py  transformations.py  trials.ipynb  utils.py
src/freesurfer_analyses/registrations/: messages.py  registrations.py  trials.ipynb  utils.py
src/freesurfer_analyses/structure/: __init__.py  structure.py  utils.py
src/freesurfer_analyses/utils/: __init__.py  bids.py  data_grabber.py  messages.py  utils.py
tests/: test_freesurfer_analyses.py
